--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
 	<groupId>com.github.hayarobi</groupId>
 	<artifactId>simple-config</artifactId>
-	<version>0.6</version>
+	<version>0.6.1</version>
 
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<slf4j.version>1.7.12</slf4j.version>
 
-		<junit.version>4.12</junit.version>
+		<junit.version>4.13.2</junit.version>
 		<mockito.version>1.10.19</mockito.version>
 	</properties>
 
@@ -127,7 +127,7 @@
         <dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy</artifactId>
-			<version>2.4.5</version>
+			<version>[2.4.21,)</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
